--- a/Documentation/NeighborhoodIterators.dox
+++ b/Documentation/NeighborhoodIterators.dox
@@ -2,6 +2,10 @@
 \page NeighborhoodIteratorsPage Neighborhood Iterators
 
 \section Introduction
+This document provides a general overview of the intended use of the
+NeighborhoodIterator classes and their associated objects for low-level image
+processing in Itk.  For a more detailed description of the API, please refer to
+the inline Itk documentation and manual.  
 
 \par
 Neighborhood iterators are the abstraction of the concept of \em locality in
@@ -37,21 +41,21 @@ This code in classical \em texbook notation can look like:
 
 \par
 The code above is readable and straightforward to implement.  But its
-efficiency is limited to the speed of random access into the image.  We can
-eliminate the random access bottleneck by using iterators to dereference
-pixels, and, for a two-dimensional image, code-readability may not suffer too much.
-But what if we want code to efficiently process an image of three, four, or
-more dimensions?  What if we want completely generic code for any dimension?
-Before long, our code size and complexity has increased to unacceptable levels.
-In Itk, we have encapsulated this functionality for efficiency, readability, and
-reusability.
+efficiency is limited to the speed of random access into the image.  It also
+assumes a two dimensional image.  We can eliminate the random access bottleneck
+by using iterators to dereference pixels, and for a two-dimensional image,
+code-readability may not suffer much.  But what if we want code for three
+or more dimensions?  Before long, the code size and complexity will increase to
+unmanageable levels.  In Itk, we have encapsulated this functionality for
+efficiency, readability, and reusability. ( In the code examples that follow,
+some template parameters may have been omitted for clarity. )
 
-\section NeighborhoodIterators
+\section Neighborhood iterators
 itk::Image neighborhood iteration and dereferencing is encapsulated in the
-itk::NeighborhoodIterator classes. ITK NeighborhoodIterators allow code
+itk::NeighborhoodIterator classes. ITK NeighborhoodIterators allow for code
 that is closer to the algorithmic abstraction,
 
-code
+\code
   ForAllThePixels p in Image
      GetTheNeighbors in a 3x3 region
        Compute their means
@@ -91,16 +95,155 @@ iterators:
 \endcode
 
 \par        
-Note that all of the work is done in lines 18-26. The code is also completely
-generalized for multiple dimensions.  Changing line 1 to:
+Note that the computational work is done in lines 18-26. The code is also
+completely generalized for multiple dimensions.  For example, changing line 1
+to:
 \code
 1   typedef itk::Image<float, 5> ImageType;
 \endcode
-produces an averaging filter for five-dimensional images.
+produces an averaging filter for five-dimensional images. 
 
-\section NeighborhoodOperators
+\section Neighborhood operators and operations
+NeighborhoodOperators are container classes for generating and storing
+computational kernels such as LaPlacian, Gaussian, derivative, and
+morphological operators.  They provide a generalized interface for creation and 
+access of the operator coefficients.  
 
-\section Calculations at Image Boundaries
-  
+\par
+Applying a NeighborhoodOperator to a NeighborhoodIterator requires defining
+some sort of operation.  For convolution, an inner product operation has been
+defined.  Using a neighborhood iterator, inner product operation, and a
+neighborhood operator, filtering by convolution with a kernel can be written
+easily in only a few lines of code in Itk.  The following code forms the basic
+model for neighborhood image processing in Itk.
+
+\code
+1  LaPlacianOperator<double, 3> OP;
+2  ImageIterator out( outputImage, regionToProcess );
+3  NeighborhoodIterator it ( OP.GetRadius(), inputImage, regionToProcess );
+4  NeighborhoodInnerProduct IP;
+5
+6  out = out.Begin();
+7  for (it.SetToBegin(); it != it.End(); ++it, ++out) 
+8  {
+9    out.Set( IP( it, OP) );
+10 }
+\endcode
+
+\par
+Of course it is also possible and appropriate to work outside of the
+operator/operation model.  Some algorithms may be written more easily and
+efficiently by simply using pixel-wise manipulations.  A ``half'' directional
+derivative is one such example.
+
+\code
+1  NeighborhoodIterator::RadiusType radius = {1, 0, 0};
+2  NeighborhoodIterator it(radius, inputImage, regionToProcess)
+3  ImageRegionIterator out( outputImage, regionToProcess );
+4  for (it.SetToBegin(); it != it.End(); ++it, ++out) 
+5  {
+6    out.Set( it.GetPixel(3) - it.GetPixel(2) );
+7  }
+\endcode
+
+\par
+Note that in this example the neighborhood is defined as a three pixel strip
+with width along only the first axis.  The neighborhood itself is referenced like
+a normal C array (through the GetPixel(n) method), with pixels ordered as in
+the itk::Image, where lowest dimension is the fastest increasing dimension.  Mapping
+the spatial orientation of neighborhood pixels to the array location is the
+responsibility of the code writer.  Some methods such as GetStride(n), which
+returns the stride length in pixels along an axis n, have been provided to help 
+in coding algorithms for arbitrary dimensionality.  The index of the center
+pixel in a neighborhood is always Size()/2.
+
+\section Calculations at image boundaries
+  For any neighborhood operation, conditions at data set boundaries become
+important.  SmartNeighborhoodIterator defines a special class of neighborhood
+iterators that transparently handle boundary conditions.  These iterators store
+a boundary condition object that is used to calculate a value of requested
+pixel indicies that lie outside the data set boundary.  New boundary condition
+objects can be defined by a user and plugged into SmartNeighboroodIterators as
+is appropriate for their algorithm.
+
+\par
+A SmartNeighborhoodIterator can be used in place of NeighborhoodIterator to
+iterate over an entire image region, but it will incur a penalty on
+performance.  For this reason, it is desirable to process the image differently 
+over distinct boundary and non-boundary regions.  Itk's definition of image regions
+makes this easy to manage.  The process is as follows: first apply the
+algorithm over all neighborhoods not on the image boundary using the fast
+NeighborhoodIterator, then process each region on the boundary using the
+SmartNeighborhoodIterator.  The size of the boundary regions are defined by the 
+radius of the neighborhood that you are using.
+
+\par
+Rewriting the inner product code using this approach looks like the following.
+(Here we are using the default SmartNeighborhoodIterator boundary condition and 
+omitting some template parameters for simplicity.)
+
+\code
+typedef NeighborhoodAlgorithm::ImageBoundaryFacesCalculator RegionFinderType;
+
+LaPlacianOperator<double, InputImageType::ImageDimension> OP;
+
+RegionFinderType regionCalculator;
+RegionFinderType::FaceListType regions;
+RegionFinderType::FaceListType::iterator regions_iterator;
+
+regions = regionCalculator( inputImage, regionToProcess, it.GetRadius() );
+regions_iterator = regions.begin();
+
+ImageIterator out;
+
+//
+// Process non-boundary regions normally.
+//
+out = ImageIterator(outputImage, *regions_iterator);
+NeighborhoodIterator it (OP.GetRadius(), inputImage, *regions_iterator);
+NeighborhoodInnerProduct IP;
+out = out.Begin();
+for (it.SetToBegin(); it != it.End(); ++it, ++out) 
+{
+  out.Set( IP( it, OP) );
+}
+
+//
+// Process each boundary region with boundary conditions.
+//
+SmartNeighborhoodInnerProduct SIP;
+SmartNeighborhoodIterator sit;
+for (regions_iterator++ ; regions_iterator != regions.end(); regions_iterator++)
+{
+  out = ImageIterator(outputImage, *regions_iterator);
+  sit = SmartNeighborhoodIterator(OP.GetRadius(), inputImage, *regions_iterator);
+  for (sit.SetToBegin(); sit != sit.End(); ++sit, ++out) 
+  {
+    out.Set( SIP( sit, OP) );
+  }
+}
+\endcode
+
+\par
+The NeighborhoodAlgorithm::ImageBoundaryFacesCalculator is a special function
+object that returns a list of sub-regions, or faces, of an image region.  The
+first region in the list corresponds to all the non-boundary pixels in the
+input image region.  Subseqent regions in the list represent all of the boundary
+faces of the image (because an image region is defined only by a single index
+and size, no single composite boundary region is possible).  The list is
+traversed with an iterator.
+
+\section Further information
+Many filters in Itk use the neighborhood iterators and operators.  Some
+canonical examples of their use include the class of
+AnisotropicDiffusionFunctions and the morphological image filters.
+itk::WatershedSegmenter also makes extensive use of the neighborhood
+iterators.
+
+\par 
+The best documentation of the API for these objects is are the class
+definitions themselves, since the API is subject to change as the tookit
+matures and is refined.
+
 
 */
