--- a/Documentation/Modules.dox
+++ b/Documentation/Modules.dox
@@ -539,3 +539,14 @@ These objects are the basic system objects used in building ITK.
 
 
 
+
+/**
+  \defgroup Deprecated  Classes that are scheduled to be removed from the Toolkit
+  The classes on this group will be removed soon. Their funcionality is now provided 
+  by other classes or changes in the toolkit have made them useless. Please report to
+  their documentation and look in to their "Deprecated" section. This section should
+  indicate what to do to replace this class in your code.
+*/
+
+
+
