--- a/Code/Numerics/FEM/ToDo.txt
+++ b/Code/Numerics/FEM/ToDo.txt
@@ -21,31 +21,8 @@
 1. - Make modifications to all FEM classes so that they use the (new) itk::Mesh to represent geometry
 
 2. - 2D registration example
-   - Determine the way dynamic elements will be handled
-   - Restructure class inheritance of elements to reduce code duplication
 
-
-3. - Fix and complete the code for 3d elements.
-   - Implement LoadEdge handling in 3d elements
-
+3. - Implement LoadEdge handling in 3d elements
 
 4. - Nonlinear elements
    - C1 elements
-
-
-Stated Assignments for 05/07/2002 Meeting
-
-Aljaz  - continued examination of element restructuring
-
-Tessa  - testing of elements
-       - addition of landmarks to registration example (with Brian)
-	   - check-in of DenseVNL linear system wrapper
-	   - check-in of testing code
-
-Brian  - development of "reasonable" registration example
-
-Jeff   - clean-up testing code for linear system wrappers
-       - add testing code for VNL dense linear system wrapper
-	   - further examination of itpack solver limitations
-	   - implement Cuthill-McKee Ordering
-
